Fix patch reader, and modularize customizer.